[feat] Logica para suportar encurtamento de uris de diversos schemas. Variáveis de ambiente para configurar a aplicação. (Apenas o form)